[package]
name = "my-http-server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "my-telemetry",
] }
my-http-server-controllers = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { branch = "main", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }


my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
async-trait = "*"
serde_repr = "*"
